--- a/html5resetter.css
+++ b/html5resetter.css
@@ -1,8 +1,8 @@
 /* 
 Reset Stylesheet
 v1.0.1
-Last Updated: 2015-05-01
-Author: HIRO - http://www.tokyo1japan.com
+Last Updated: 2018-11-02
+Author: Loki - https://i-studio.jp/
 */
 
 * { margin:0; padding:0; }
